# PhD-QMCLib

./: .editorconfig  .gitattributes  .gitignore  CHANGELOG.md  LICENSE.md  README.md  pyproject.toml  requirements.txt  setup.py
my_research_libs/: __init__.py  ideal.py  utils.py
my_research_libs/mrbp_qmc/: __init__.py  config.py  dmc.py  model.py  vmc.py  vmc_ndf.py
my_research_libs/multirods/: __init__.py
my_research_libs/multirods_qmc/: jastrow.py
my_research_libs/qmc_base/: __init__.py  core.py  dmc.py  gufunc.py  model.py  utils.py  vmc.py  vmc_ndf.py
my_research_libs/qmc_data/: dmc.py
my_research_libs/qmc_exec/: __init__.py  cli_app.py  config.py  data.py  dmc.py  io.py  logging.py  vmc.py
my_research_libs/stats/: __init__.py  reblock.py
my_research_libs/util/: attr.py
phd_research_libs/: __init__.py
phd_research_libs/multirods/: __init__.py
phd_research_libs/multirods_qmc/: __init__.py  jastrow.py
phd_research_libs/qmc_base/: __init__.py  core.py  gufunc.py  vmc.py
phd_research_libs/qmc_lib/: __init__.py  vmc.py
phdthesis_lib/: __init__.py
phdthesis_lib/multirods_qmc/: __init__.py  jastrow.py  trial_funcs.py
phdthesis_lib/qmc_lib/: __init__.py  core.py  gufunc.py  vmc.py
reports/: ab-initio-methods.tex  abstract.tex  apsrev-title.bst  bibliography.old.bib  candidature.bib  conclusions.tex  definitions.tex  documentstyle-a.sty  documentstyle-b.sty  front.tex  introduction.tex  last.tex  manybody-systems.tex  mean-field-theory.tex  packages.tex  results.tex  thesis.tex
src/my_research_libs/: __init__.py
src/phd_qmclib/: __init__.py
tests/: test_utils.py
tests/mrbp_qmc/: dmc-cli-app-spec.toml  dmc-cli-app-spec.yml  dmc-conf.tpl.yml  test-dmc-density-results.h5  test-dmc-ssf-results.h5  test-vmc-results.h5  (+10 more)
thesis_lib/: __init__.py  constants.py  ideal.py  utils.py
(+168 files in other folders)
