[tool.poetry]
name = "myresearch-libs"
version = "0.15.0"
description = "A collection of libraries to estimate the physical properties of an interacting, quantum many-body system."
authors = ["Omar Abel Rodríguez-López <oarodriguez.mx@gmail.com>"]
license = "BSD-3-Clause"
readme = "README.md"
homepage = "https://bitbucket.org/oarodriguez/myresearch-libs/"
repository = "https://bitbucket.org/oarodriguez/myresearch-libs/"
classifiers = [
  "Development Status :: 3 - Alpha",
  "Environment :: Console",
  "Intended Audience :: Developers",
  "Intended Audience :: Science/Research",
  "License :: OSI Approved :: BSD License",
  "Operating System :: OS Independent",
  "Programming Language :: Python",
  "Programming Language :: Python :: 3",
  "Programming Language :: Python :: 3.6",
  "Programming Language :: Python :: 3.7",
  "Topic :: Scientific/Engineering :: Physics",
  "Topic :: Software Development :: Libraries :: Python Modules"
]

packages = [
  { include = "my_research_libs", from = "src" }
]

[tool.poetry.dependencies]
python = "^3.7"
numpy = "^1.18.1"
scipy = "^1.4.1"
matplotlib = "^3.1.3"
numba = "^0.48.0"
h5py = "^2.10.0"
mpmath = "^1.1.0"
pytz = "^2019.3"
tzlocal = "^2.0.0"
dask = {extras = ["bag"], version = "^2.11.0"}
decorator = "^4.4.2"
pyyaml = "^5.3"
jinja2 = "^2.11.1"
attrs = "^19.3.0"
tqdm = "^4.43.0"
colorlog = "^4.1.0"
toml = "^0.10.0"
cached-property = "^1.5.1"
click = "^7.0"
python-dotenv = "^0.12.0"
"ruamel.yaml" = "^0.16.10"

[tool.poetry.dev-dependencies]
pytest = "^5.3.5"

[tool.poetry.scripts]
mrbp_dmc = 'my_research_libs.mrbp_qmc.dmc_cli:cli'
mrbp_vmc = 'my_research_libs.mrbp_qmc.vmc_cli:cli'

[build-system]
requires = ["poetry>=0.12"]
build-backend = "poetry.masonry.api"
